Setup ceramic store and model with modelAliases

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@ceramicnetwork/http-client": "^1.4.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@glazed/datamodel": "^0.1.2",
+    "@glazed/did-datastore": "^0.1.4",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "dids": "^2.4.0",
